--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ notifications:
   email: false
 script:
 - cd validate && go test -v -covermode=count -coverprofile=../coverage.out
-- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken
-  $COVERALLS_TOKEN
+- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken=$COVERALLS_TOKEN
 - make build-all
 deploy:
   provider: releases
