--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ notifications:
   email: false
 script:
 - cd validate && go test -v -covermode=count -coverprofile=coverage.out
+- ls
+- ls validate
 - $HOME/gopath/bin/goveralls -coverprofile=validate/coverage.out -service=travis-ci -repotoken=$COVERALLS_TOKEN
 - make build-all
 deploy:
